syntax = "proto3";

package attestation_agent;

service AttestationAgentService {
    rpc GetTeeType (GetTeeTypeRequest) returns (GetTeeTypeResponse);
    rpc GetEvidence (GetEvidenceRequest) returns (GetEvidenceResponse);
}

message GetTeeTypeRequest {}

message GetTeeTypeResponse {
    string tee = 1;
}

message GetEvidenceRequest {
    bytes runtime_data = 1;
}

message GetEvidenceResponse {
    bytes evidence = 1;
}