syntax = "proto3";

package getresource;

message GetResourceRequest {
    string ResourceUri = 1;
    string KbcName = 2;
}

message GetResourceResponse {
    bytes Resource = 1;
}

service GetResourceService {
    rpc GetResource(GetResourceRequest) returns (GetResourceResponse) {};
}